<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Fragment.FirstFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/button_news"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/news" />

        <Button
            android:id="@+id/button_timetable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/grouplist" />

        <Button
            android:id="@+id/button_map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/map" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp">

        <ImageView
            android:id="@+id/main_screen_image"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="75dp"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/mirea"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop" />

        <EditText
            android:id="@+id/get_group"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_screen_image"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="16dp"
            android:hint="@string/write_group"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/get_group"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/button_get_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_save"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/current" />
    </RelativeLayout>


</FrameLayout>